macros/tests/macros/failures/invalid_return.rs
#[netsim_embed_macros::machine]
fn foo() -> usize {
    5
}

fn main() {}
